--- a/index.html
+++ b/index.html
@@ -65,18 +65,18 @@
     </div>
 
     <div class="works">
-      <h1 class="display-4">My Work</h1>
+      <h1 class="display-4" id="workTitle">My Work</h1>
       <div class="myProjects">
         <div class="row d-flex justify-content-center">
-          <div class="col-3 d-flex justify-content-center">
+          <div class="col-7 col-sm-4 col-md-3 d-flex justify-content-center">
             <a href="javascript:void(0)" class="projects proj1"></a>
             <h4>Pomodoro App</h4>
           </div>
-          <div class="col-3 d-flex justify-content-center">
+          <div class="col-7 col-sm-4 col-md-3 d-flex justify-content-center">
             <a href="javascript:void(0)" class="projects proj2"></a>
             <h4>Trivia Soccer Game</h4>
           </div>
-          <div class="col-3 d-flex justify-content-center">
+          <div class="col-7 col-sm-4 col-md-3 d-flex justify-content-center">
             <a href="javascript:void(0)" class="projects proj3"></a>
             <h4>Github Repos Ranking</h4>
           </div>
