--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     />
     <link rel="stylesheet" href="./assets/css/all.css" />
     <link rel="stylesheet" href="./assets/css/popup.css" />
+    <title>Victor Dantas</title>
   </head>
   <body>
     <div class="overlay"></div>
