--- a/index.html
+++ b/index.html
@@ -131,16 +131,18 @@
             repudiandae corporis, consequuntur doloribus veritatis. Ex.
           </p>
         </div>
-        <a class="btn1" target="_blank"
-          ><button type="button" class="btn btn-primary">
-            Check It Out!
-          </button></a
-        >
-        <a class="repo" target="_blank"
-          ><button type="button" class="btn btn-success">
-            Github Repo
-          </button></a
-        >
+        <div class="buttons">
+          <a class="btn1" target="_blank"
+            ><button type="button" class="btn btn-primary">
+              Check It Out!
+            </button></a
+          >
+          <a class="repo" target="_blank"
+            ><button type="button" class="btn btn-success">
+              Github Repo
+            </button></a
+          >
+        </div>
       </div>
     </div>
 
