--- a/index.html
+++ b/index.html
@@ -41,26 +41,47 @@
 
     <div class="container" id="about">
       <div class="about">
-        <h1 class="display-4">Welcome, I'm Victor</h1>
-        <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore
-          nostrum porro nulla non itaque ex nobis, id iusto quis magni corrupti
-          accusantium placeat quasi accusamus doloribus eius deleniti
-          distinctio. Rem in nobis voluptatibus laudantium velit itaque iusto,
-          rerum quam nulla magni, similique esse consequatur dicta tenetur.
-          Deserunt esse voluptate nam odio quasi dolor nihil quos ab explicabo.
-          Fugiat inventore quo distinctio labore recusandae. Dicta nihil
-          delectus fugiat? Magnam repellendus voluptatem fugiat non id
-          voluptatibus, quasi est in asperiores nemo ut labore repudiandae
-          beatae fuga adipisci. Sunt, non natus? Veritatis, a quo vero
-          repellendus quas saepe esse recusandae nihil animi et! Ea obcaecati
-          quas, amet deserunt incidunt est, nam reiciendis in nemo molestias
-          impedit dolorem praesentium soluta odit modi, quo itaque eius facilis
-          alias vel aperiam? Officiis quibusdam quis ab minus pariatur fugit
-          voluptates deserunt illum dignissimos explicabo hic quisquam
-          recusandae, ipsum, nam est veritatis ex officia, placeat illo ad!
-          Ratione?
-        </p>
+        <h1 class="display-4">Welcome. I'm Victor</h1>
+        <h6>Front-End Web Developer</h6>
+        <div class="contents row d-flex justify-content-center">
+          <div class="workEthics col-9 col-sm-6 col-md-4">
+            <i class="fas fa-network-wired"></i><br />
+            <h5>Work Ethics</h5>
+            <br />
+            <p>
+              My work Ethics might be described in one word: Commitment. As a
+              developer, I am completely dedicated to deliver the best I can in
+              terms of functionality and design. My mind is always set on
+              becoming better and putting myself fully into any project I commit
+              to.
+            </p>
+            <hr />
+          </div>
+          <div class="skills col-9 col-sm-6 col-md-4">
+            <i class="fas fa-laptop-code"></i><br />
+            <h5>Skills</h5>
+            <br />
+            <p>
+              Vanilla JavaScript, Jquery, HTML, CSS and SASS are my usual
+              playgrounds, in which I can deliver extremely consistent results.
+              Other technologies I have experience with are Adobe Photoshop,
+              Python, C++, Wordpress and React.js. In addition to those, I am
+              proficient at problem solving, communication and Mathematics.
+            </p>
+            <hr />
+          </div>
+          <div class="experience col-9 col-sm-6 col-md-4">
+            <i class="fas fa-briefcase"></i><br />
+            <h5>Experience</h5>
+            <br />
+            <p>
+              I have around 3 years of experience with coding in general, with
+              over 6 months completely devoted to Web Development. Freelancing
+              is also something I devote time to, quite frequently.
+            </p>
+            <hr />
+          </div>
+        </div>
       </div>
     </div>
 
@@ -74,7 +95,7 @@
           </div>
           <div class="col-7 col-sm-4 col-md-3 d-flex justify-content-center">
             <a href="javascript:void(0)" class="projects proj2"></a>
-            <h4>Trivia Soccer Game</h4>
+            <h4>Soccer Trivia Game</h4>
           </div>
           <div class="col-7 col-sm-4 col-md-3 d-flex justify-content-center">
             <a href="javascript:void(0)" class="projects proj3"></a>
@@ -88,24 +109,9 @@
       <div class="contact">
         <h1 class="display-5">Contact Info</h1>
         <p>
-          Lorem ipsum dolor sit, amet consectetur adipisicing elit. Enim neque
-          illo totam quae placeat, laboriosam, minima accusamus omnis tempore
-          obcaecati expedita aliquam nam? Similique id cupiditate iure?
-          Consectetur rem aliquam tempora doloremque architecto! Similique odio
-          vero animi architecto voluptatem provident debitis exercitationem
-          voluptatibus blanditiis. Nam impedit culpa earum quis dolor! Nemo
-          neque excepturi, ad molestias doloremque unde, quis doloribus ducimus
-          ratione tempore exercitationem! Eligendi consequatur expedita possimus
-          eum ducimus, maxime dolor maiores accusamus iusto ipsa, placeat iure
-          incidunt sit minima exercitationem praesentium fuga illo eveniet
-          deleniti vitae? Facilis nemo exercitationem maxime ullam! Quos ipsum
-          blanditiis voluptates quibusdam error sapiente doloribus sequi animi
-          quam maiores. Illo reiciendis numquam reprehenderit necessitatibus
-          dolorum sed rem. In ipsum earum, explicabo blanditiis maiores illum
-          atque mollitia quod, ea rerum aliquid numquam quis quaerat! Autem
-          ipsum neque aperiam deleniti eligendi nulla, dolores cupiditate
-          tempore voluptatum quas quasi deserunt rem aut voluptatibus enim
-          impedit pariatur perferendis natus?
+          E-mail: jvdantas.work@gmail.com <br />
+          Phone: (682)347-9657 <br />
+          Available every day by text, e-mail or call.
         </p>
       </div>
     </div>
