--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
               <br />
 
               I have around 3 years of experience with coding in general, with
-              over 6 months completely devoted to Web Development. Freelancing
+              over an year completely devoted to Web Development. Freelancing
               is also something I devote time to, quite frequently.
             </p>
           </div>
